--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "zod": "^3.25.49"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
